syntax = "proto3";

package protocols.p2p;

message MessageData{
	string id = 1;
	string sourcePeer = 2;
	string targetPeer = 3;
	bytes nodePubKey = 4;// Authoring node Secp256k1 public key (32bytes) - protobufs serielized
	bytes sign = 5;// signature of message data + method specific data by message authoring node.
	int64 timestamp = 6;// unix time
}

//// echo protocol

// a protocol define a set of reuqest and responses
message EchoRequest {
    MessageData messageData = 1;

    // method specific data
    string funcName = 3;
    string parameter = 4;

    // add any additional message data here....
}

message EchoResponse {
    MessageData messageData = 1;

    // response specific data
    int64 message = 2;

    // ... add any additional message data here....
}

message EchoCert {
	MessageData messageData = 1;
	string x = 2;
	string y = 3;
	bytes cert = 4;
	string r = 5;
	string s = 6;
}
